// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form children container children container 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    childrencontainer="[object Object]"
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-8 ant-form-item-label"
    >
      <label
        class=""
        title="Inputgroup"
      >
        Inputgroup
      </label>
    </div>
    <div
      class="ant-col ant-col-12 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      class="ant-input"
                      id="input1"
                      style="width: 50%;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      class="ant-input"
                      id="input2"
                      style="width: 50%;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    childrencontainer="div"
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-8 ant-form-item-label"
    >
      <label
        class=""
        title="childrenbtn"
      >
        childrenbtn
      </label>
    </div>
    <div
      class="ant-col ant-col-12 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  title="btn1"
                >
                  btn1
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn"
                      type="button"
                    >
                      <span>
                        button1
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  title="btn2"
                >
                  btn2
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn"
                      type="button"
                    >
                      <span>
                        button2
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`form form props onValueChange cascade 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item ant-form-item-has-success"
  >
    <div
      class="ant-col ant-col-8 ant-form-item-label"
    >
      <label
        class=""
        for="input"
        title="input"
      >
        input
      </label>
    </div>
    <div
      class="ant-col ant-col-12 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            class="ant-input"
            id="input"
            type="text"
            value="a"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
    dependency="[object Object]"
  >
    <div
      class="ant-col ant-col-8 ant-form-item-label"
    >
      <label
        class=""
        for="input2"
        title="inpt2"
      >
        inpt2
      </label>
    </div>
    <div
      class="ant-col ant-col-12 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            class="ant-input"
            id="input2"
            type="text"
            value="aaa"
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`form form props remoteValues Error 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-8 ant-form-item-label"
    >
      <label
        class=""
        for="input"
        title="input"
      >
        input
      </label>
    </div>
    <div
      class="ant-col ant-col-12 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            class="ant-input"
            id="input"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
    dependency="[object Object]"
  >
    <div
      class="ant-col ant-col-8 ant-form-item-label"
    >
      <label
        class=""
        for="input2"
        title="inpt2"
      >
        inpt2
      </label>
    </div>
    <div
      class="ant-col ant-col-12 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <input
            class="ant-input"
            id="input2"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;
